--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -5,11 +5,12 @@
 
   <tr class="total_line">
     <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(@cart.total_price) %>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
   </tr>
   
 </table>        
 
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to 'Empty cart', @cart, method: :delete,
     confirm: 'Are you sure?' %>
  
